--- a/contactme.html
+++ b/contactme.html
@@ -7,13 +7,13 @@
     <body>
         <h1>Contact Me</h1>
         <p><em><b>imomkarpatilofficial@gmail.com</b></em></p>
-        <form action="mailto:gmail@sarangpatil108.com" method="post">
+        <form action="imomkarpatilofficial@gmail.com" method="post">
             <label>Your Name:</label>
-            <input type="text" name=Name"" value=""><br>
+            <input type="text" name="yourName" value=""><br>
             <label>Your email:</label><br>
-            <input type="email" name="Email" value=""><br>
+            <input type="email" name="yourEmail" value=""><br>
             <label>Your Message:</label><br>
-            <textarea name="" rows="10" cols="30"></textarea><br>
+            <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
             <input type="submit" name=""  color="black"><br>
             
 
