--- a/contactme.html
+++ b/contactme.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Contact Me</h1>
         <p><em><b>imomkarpatilofficial@gmail.com</b></em></p>
-        <form action="imomkarpatilofficial@gmail.com" method="post">
+        <form action="mailto:gmail@imomkarpatilofficial.com" method="post">
             <label>Your Name:</label>
             <input type="text" name="yourName" value=""><br>
             <label>Your email:</label><br>
