--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         
         <hr size="2" color="black">
         <h3><b>Education</b></h3>
-        <p>I have passed SSC from <em><strong> Mahatma Gandhi Vidyalay,Rukadi</strong>. and</em></p>
-        <p>I have passed HSC from <em><strong>Manere Highschool & Junior College, Ichalkaranji.</strong></em> in <b>SCIENCE</b></p>
-        <p>Currently learning Higher Education in <b>Computer Science and Engineering</b> from <em><strong><a href="https://www.sitcoe.ac.in/"> Sharad Institute of Technology and College of Engineering,Ichalkaranji</a></strong></em>.</p>
+        <p>I have Done SSC from <em><strong> Mahatma Gandhi Vidyalay,Rukadi</strong>. and</em></p>
+        <p>HSC from <em><strong>Manere Highschool & Junior College, Ichalkaranji.</strong></em> in <b>SCIENCE</b></p>
+        <p>Current i am an undergraduate student in <b>Computer Science and Engineering</b> at <em><strong><a href="https://www.sitcoe.ac.in/"> Sharad Institute of Technology and College of Engineering,Ichalkaranji</a></strong></em>.</p>
         <hr size="2" color="black">
         <h3><b>YouTube Channels</b></h3>
         <table>
@@ -39,7 +39,7 @@
 
                 <tr>
                     <td><strong><a href="https://www.youtube.com/channel/UC4tcGdzgeG44afI1DrJ2H_A">Code Solution</a></strong></td>
-                    <td>Here you get Solution of Programming language and Solution of problems from various platforms like <strong><em>Hackerrank,GeeksforGeeks</strong></em>, and many more</td>
+                    <td>Here you get Solution of Programming language from various platforms like <strong><em>Hackerrank,GeeksforGeeks</strong></em>, Projects and many more</td>
                 </tr> 
             </tbody>   
         </table>  
