--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>HSC from <em><strong>Manere Highschool & Junior College, Ichalkaranji.</strong></em> in <b>SCIENCE</b></p>
         <p>Current i am an undergraduate student in <b>Computer Science and Engineering</b> at <em><strong><a href="https://www.sitcoe.ac.in/"> Sharad Institute of Technology and College of Engineering,Ichalkaranji</a></strong></em>.</p>
         <hr size="2" color="black">
-        <h3><b>YouTube Channels</b></h3>
+        <!--<h3><b>YouTube Channels</b></h3>
         <table>
             <thead>
                 <tr>
@@ -42,7 +42,7 @@
                     <td>Here you get Solution of Programming language from various platforms like <strong><em>Hackerrank,GeeksforGeeks</strong></em>, Projects and many more</td>
                 </tr> 
             </tbody>   
-        </table>  
+        </table>  -->
         <hr size="2" color="black">
         <h3><b>Skills</b></h3>
 
